# mzPeakConverter

./: .dockerignore  .gitattributes  .gitignore  BACKLOG.md  CHANGELOG.md  Cargo.toml  GRID-FACET-DESIGN.md  HANDOFF.md  LICENSE  NATIVE-TOF-DESIGN.md  PLAN.md  README.md  THIRD-PARTY-NOTICES.md  sbom.cdx.json
.github/workflows/: ci.yml  windows.yml
cv/: mzpeak.obo
docker/: README.md
docker/linux-sciex-spike/: Dockerfile
docker/windows/: Dockerfile  build-and-test.ps1
docs/: AGILENT_FILEDIRECT.md  PLATFORM_SUPPORT.md  USER_MANUAL.md  mzpeakviewer-compliance-reply.md  tims_mobility_recalibration.rs
glue/agilent/: AgilentGlue.csproj  AgilentGlue.runtimeconfig.json  Glue.cs  README.md
glue/agilent_midac/: AgilentMidacGlue.csproj  AgilentMidacGlue.runtimeconfig.json  Glue.cs
glue/sciex/: Glue.cs  README.md  SciexGlue.csproj  SciexGlue.runtimeconfig.json
glue/shimadzu/: Glue.cs  README.md  ShimadzuGlue.csproj  ShimadzuGlue.runtimeconfig.json
glue/waters/: Glue.cs  README.md  WatersGlue.csproj
src/: agilent.rs  agilent_midac.rs  agilent_profile.rs  bruker_baf.rs  bruker_native.rs  bruker_sdk.rs  bruker_tsf.rs  embed_aux.rs  filter.rs  main.rs  sciex.rs  shimadzu.rs  thermo_status.rs  thermo_trailers.rs  tims_mobility.rs  tof_grid.rs  vendor.rs  waters.rs
tests/: contract_strings.rs  corpus.tsv  run_corpus_e2e.sh  run_data_sweep.sh
tests/data/: mixed_precision.mzML
tools/: box-convert-DESIGN.md  box.env.example  box_convert.sh  box_convert_remote.ps1  box_convert_scp.sh  box_local_convert.ps1  box_url_convert.ps1  compare_ion_mobility.py  convert_corpus.sh  convert_vendor_ci.sh  corpus_bench.sh  corpus_box_convert.sh  corpus_full.sh  corpus_manifest.tsv  corpus_ratio_table.py  gen_sbom.py  harvest_calibrations.py  mine_modeltypes.py  modeltype_mine_urls.txt  presign_put.py  render_ratio_table.py  rerun-tests.sh  s3_relay.py  timstof_urls.txt  tof_grid_make_mixed_mzml.py  tof_grid_verify_lossless.py  vendor_ci_manifest.tsv
tools/flash/: README.md  flash_convert_validate.ps1  flash_run.sh
