[package]
name = "mzpeak-convert"
version = "0.4.14"
edition = "2024"
# MSRV floor inherited from mzpeak_prototyping (stdlib APIs stabilized in 1.87).
rust-version = "1.87"

[[bin]]
name = "mzpeak-convert"
path = "src/main.rs"

[dependencies]
# Core compatibility crates pinned EXACTLY — these fracture the arrow/mzdata type graph if
# they drift. Versions mirror mzpeak_prototyping's own Cargo.toml (one unified copy).
arrow = "=57.0.0"
parquet = { version = "=57.0.0", features = ["encryption"] }
zip = "=4.1.0"
libloading = "0.8"   # vendor native-DLL loading (Bruker BAF, Waters MassLynx); cross-platform compile
mzdata = { version = "=0.65.2", features = ["imzml", "serde", "bruker_tdf", "thermo", "nalgebra", "zstd", "numpress"] }
mzpeaks = "=1.0.9"

# Reference mzPeak writer, vendored locally (default-features=false drops the async/tokio/
# object_store stack — local-file-only). This is also the seam we will extend for the native
# integer-TOF reader (see NATIVE-TOF-DESIGN.md).
mzpeak_prototyping = { path = "vendor/mzpeak_prototyping", default-features = false }

# Native Bruker TDF integer-TOF reads for the lossless ims-compact path (same crate mzdata wraps,
# so we read the raw u32 TOF bins mzdata's API discards). Pinned to mzdata's transitive version.
timsrust = "=0.4.1"
# Bruker TSF (line-spectra timsTOF/MALDI): mzdata can't read TSF, and timsrust-tsf 0.1.4 pulls a
# rusqlite/libsqlite3-sys that conflicts with mzdata's. So we read the TSF SQLite + zstd-chunked
# tsf_bin directly (ported from BRFP), reusing the versions mzdata already links (one native lib).
# `bundled` compiles SQLite from source (no system libsqlite3) so the build is self-contained on
# every platform — required on Windows runners, and removes the libsqlite3-dev dep on Linux. There is
# exactly one rusqlite/libsqlite3-sys in the tree (shared with mzdata + timsrust), so the feature
# unifies cleanly with no duplicate-symbol risk.
rusqlite = { version = "0.31", features = ["bundled"] }
zstd = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
# gzip for stream-embedded vendor blobs (miniz_oxide backend — pure Rust, no native lib conflict).
flate2 = "1"
# Direct access to Thermo scan-trailer bags (FAIMS CV, injection time, charge, …) which mzdata's
# spectrum API doesn't surface. Same crate (+ features) mzdata wraps, so it unifies to one copy.
thermorawfilereader = { version = "=0.7.0", features = ["net8_0", "nethost-download"] }

# Optical-image first-IFD dimension reads (dimensions-only, no codecs) for --image embedding.
# Pinned to match the mzML2mzPeak prototype exactly.
tiff = { version = "=0.11.3", default-features = false }
# SHA-256 over embedded optical-image / SDRF bytes (bounded streamed pass). Already in the tree
# transitively; declared explicitly here so the embed_aux module can depend on it directly.
sha2 = "0.10"

clap = { version = "4", features = ["derive"] }
# Parallel timsTOF frame decode (#19). Already in the tree transitively (timsrust pulls it); declared
# here so the ims-compact writer can fan frame decode across cores. Pinned to the transitive version.
rayon = "1"
anyhow = "1"
log = "0.4"
env_logger = "0.11"

# Vendor-SDK readers are compiled in automatically on the platforms where the proprietary vendor
# libraries exist (see the cfg-gated modules in src/main.rs) — no opt-in feature, "on by default
# where available". They load the vendor DLLs at runtime and report a clear error if absent.

# In-process .NET hosting for the native Agilent (MHDAC) / SciEX (Clearcore2) glue — Windows only.
[target.'cfg(windows)'.dependencies]
netcorehost = "0.18"

# Release profile tuned for the batch-CLI converter (#17). thin-LTO + a single codegen unit let the
# optimizer inline across crate boundaries (mzdata/timsrust/parquet hot loops); panic=abort drops the
# unwind tables (the converter is a fail-fast batch tool, nothing catches unwinds). Output is
# byte-identical — these flags change codegen, not behavior. `cargo test` keeps unwind automatically
# (Cargo forces panic=unwind for the test/bench profiles, so #[should_panic] still works).
[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
